syntax = "proto3";

package update;

import "ptypes/empty/empty.proto";
import "github.com/networkservicemesh/networkservicemesh/controlplane/pkg/apis/connectioncontext/connectioncontext.proto";

message AddDNSContextMessage {
    connectioncontext.DNSContext context = 1;
    string connectionID = 2;
}

message RemoveDNSContextMessage {
    string connectionID = 1;
}

service DNSConfigService {
    rpc AddDNSContext (AddDNSContextMessage) returns (google.protobuf.Empty);
    rpc RemoveDNSContext (RemoveDNSContextMessage) returns (google.protobuf.Empty);
}